<resources>
    <string name="app_name">Bedu Shop</string>
    <string name="login_btn">iniciar sesión</string>
    <string name="registrate_btn">Registrarse</string>
    <string name="email_input">Correo electrónico</string>
    <string name="password_input">Contraseña</string>
    <string name="name_input">Nombre completo</string>
    <string name="phone_input">Teléfono</string>
    <string name="registration_text">Regístrate aquí</string>
    <string name="bedu_shop">Bedu shop</string>
    <string name="blank_field">Por favor rellena el campo</string>
    <string name="registrate_text">Regístrate</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_item">Home</string>
    <string name="cart_item">Cart</string>
    <string name="profile_item">Profile</string>
    <string name="new_product">Nuevo</string>
    <string name="available_product">Disponible en tu domicilio</string>
    <string name="delivery_date">Entrega mañana</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="description_title">Descripción</string>
    <string name="help">Help</string>
    <string name="search">Search</string>
    <string name="near_products">Productos cerca de tí</string>
    <string name="interesetText">En 6 meses sin intereses</string>
    <string name="productTransitionName">product_transition</string>
    <string name="logout_text">Cerrar sesión</string>
    <string name="user_not_found">Usuario no encontrado</string>
    <string name="request_error">Error en la petición</string>
    <string name="products_not_found">Productos no encontrados</string>
    <string name="add_addres">Agregar dirección</string>
    <string name="actualLocation">Ubicacion actual</string>
    <string name="updateLocation">Actualizar</string>
    <string name="turnOnGPS">El GPS se encuentra apagado. Por favor enciendalo</string>
    <string name="noLocationFound">No se ha podido encontrar la ubicación</string>
    <string name="proceedPayment">Proceda al pago</string>
    <string name="paymentData">Datos de pago</string>
    <string name="payment_method">Método de pago actual</string>
    <string name="resumee">Resumen</string>
    <string name="subtotal">Subtotal</string>
    <string name="shipping">Envio</string>
    <string name="total">Total</string>
    <string name="shipping_price">$30.00</string>
    <string name="pay">Pagar</string>
    <string name="go_to_main_menu">Ir al menu principal</string>
    <string name="thanks_for_your_purchase">Gracias por tu compra!</string>
    <string name="package_will_arrive_soon">Recibirás tu paquete pronto</string>
    <string name="channel_payments">Pagos</string>
    <string name="payment_descriptions">Notificaciones acerca de los pagos</string>
    <string name="purchase_title">Compra realizada</string>
    <string name="purchase_body">Tu pedido llegará en una semana</string>

</resources>