<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".home.fragments.ProductDetailsFragment"
        android:background="@color/secondaryTextColor"
        android:transitionName="product_transition">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="30dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="30dp" />

        <TextView
            android:id="@+id/newProductText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/new_product"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/detailsProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Product Name"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/newProductText"
            android:transitionName="productNameTransition"
            />

        <RatingBar
            android:id="@+id/detailsRatingBar"
            style="@android:style/Widget.Material.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:numStars="5"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/detailsProductName"
            android:progressTint="@color/primaryColor"
            android:progressBackgroundTint="@color/secondaryColor"
            android:transitionName="ratingBarTransition"/>

        <TextView
            android:id="@+id/detailsRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="10"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/detailsRatingBar"
            app:layout_constraintTop_toBottomOf="@+id/detailsProductName"
            android:transitionName="ratingsTextTransition"
            />

        <ImageView
            android:id="@+id/detailsProductImage"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_bedu_logo"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toBottomOf="@+id/detailsRatingBar"
            android:transitionName="productImageTransition"/>

        <TextView
            android:id="@+id/detailsPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="$100"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/detailsProductImage"
            android:transitionName="priceTextTransition"
            />

        <TextView
            android:id="@+id/interestText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/interesetText"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/detailsPrice"
            />

        <TextView
            android:id="@+id/interestPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="de $20"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/interestText"
            app:layout_constraintTop_toBottomOf="@+id/detailsPrice"
            />

        <TextView
            android:id="@+id/availableText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="5dp"
            android:text="@string/available_product"
            android:textSize="15sp"
            app:drawableLeftCompat="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/interestText"
            />

        <TextView
            android:id="@+id/deliveryDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawablePadding="5dp"
            android:text="@string/delivery_date"
            android:textSize="15sp"
            app:drawableStartCompat="@drawable/ic_car"

            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/availableText"
            />

        <Button
            android:id="@+id/addToCartBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/deliveryDateText"
            android:textColor="@color/secondaryTextColor"
            />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/description_title"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/addToCartBtn"
            />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Descripción del producto específico que se vaya a mostrar en el details fragment"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
